--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   shelf_router: ^1.1.4
   http: ^1.2.2
   shelf_cors_headers: ^0.1.5
+  network_info_plus: ^6.0.1
 
 dev_dependencies:
   flutter_test:
